# libeuicc-framework

./: .gitignore  .gitmodules  CMakeLists.txt  cjson-LICENSE  libeuicc-LICENSE  libeuicc.pc  module.modulemap.in
.github/workflows/: build.yaml
include/: version.c.in  version.h.in
